--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -72,7 +72,7 @@
                 //FormElements.init();
                 FormWizard.init();
                 TableData.init();
-                
+                UIModals.init();
             });
         </script>
 		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
