--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,8 @@
         <link rel="stylesheet" type="text/css" href="{{ static('backend/plugins/select2/select2.css') }}" />
         <link rel="stylesheet" href="{{ static('backend/plugins/DataTables/media/css/DT_bootstrap.css') }}" />
         <link rel="stylesheet" href="{{ static('backend/plugins/datepicker/css/datepicker.css') }}">
+        <link rel="stylesheet" href="{{ static('backend/plugins/bootstrap-modal/css/bootstrap-modal-bs3patch.css') }}"  type="text/css"/>
+        <link rel="stylesheet" href="{{ static('backend/plugins/bootstrap-modal/css/bootstrap-modal.css') }}"  type="text/css"/>
         <!--[if IE 7]>
         {#<link rel="stylesheet" href="{{ static('backend/plugins/font-awesome/css/font-awesome-ie7.min.css') }}">#}
         <![endif]-->
