--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -1,3 +1,44 @@
+{# 
+
+TODO: 
+
+ADD NOTES! 
+Add supplemental load details (include a supplemental cost)
+
+Add field to indicate if dispatcher has required permits??
+
+Is truck/driver an owner-operator?
+	if yes - upload permits to website and e-mail to trucker?
+
+Do we need to track hours of service for trucks?
+
+sms/email of load details upon assignment
+
+SMS/Email/dial-in based driver logs (on duty/off duty) and/or load status
+
+Loads local to a driver
+
+Create a favorite load
+Recurring loads
+notification system of new loads and recommending drivers
+	# axels
+	shape of trailer
+	type of trailer
+
+prepare/send invoices
+
+Directions to location
+
+upload signed load confirmation
+
+indicate a load as been paid?
+
+integrate with quicken
+
+payment processing to owner operator drivers
+
+#}
+
 {% extends "layout_map.html" %}
 
 {% block content %}
