--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -75,6 +75,13 @@
                             </a>
                             
                         </li>
+                        <li>
+                            <a href="{{ url_for('static.logout') }}"><i class="fa fa-globe"></i>
+                                <span class="title"> Logout </span>
+                                <span class="selected"></span>
+                            </a>
+                            
+                        </li>
                     </ul>
                     <!-- end: MAIN NAVIGATION MENU -->
                 </div>
