load creation update/model updates

--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -268,7 +268,7 @@ payment processing to owner operator drivers
 			                        </tr>
 			                    </thead>
 			                    <tbody>
-			                        {% for location in load.lane.locations %}
+			                        {% for location in locations %}
 			                            <tr>
 			                            	<td>{{ location.stop_number }}</td>
 			                            	<td>{{ location.address.address1 }}
