--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -189,125 +189,8 @@
 		</div>
 	</div>
 </form>
-
-{#<div id="responsive-1" class="modal fade" tabindex="-1" data-width="760" style="display: none;">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-			&times;
-		</button>
-		<h4 class="modal-title">Add Location</h4>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<i class="fa fa-external-link-square"></i>
-					Location
-				</div>
-				<div class="panel-body">
-					<div class="row">
-						<div class="col-md-12">
-							<h4>General</h4>
-							<hr>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Address <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									City <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									State <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Zip Code <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row"><hr></div>
-					<div class="row">
-						<div class="col-md-12">
-							<h4>Receiver</h4>
-							<hr>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Name <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Phone <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row"><hr></div>
-					<div class="row">
-						<div class="col-md-6">
-							<h4>Pickup</h4>
-							<hr>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Weight <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<h4>Delivery</h4>
-							<hr>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">
-									Weight <span class="symbol required"></span>
-								</label>
-								<div class="col-sm-7">
-									<input type="text" class="form-control">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button type="button" data-dismiss="modal" class="btn btn-light-grey">
-			Close
-		</button>
-		<button type="button" data-dismiss="modal" class="btn btn-blue save-modal">
-			Add
-		</button>
-	</div>
-</div>#}
 		<!-- end: RIGHT SIDEBAR -->
-{% include "partials/main_javascripts.html" %}
+		{% include "partials/main_javascripts.html" %}
 		<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 		<script src="{{ static('backend/plugins/jquery-inputlimiter/jquery.inputlimiter.1.3.1.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/jquery-validation/dist/jquery.validate.min.js') }}"></script>
@@ -325,22 +208,34 @@
 		<script>
 			$(document).ready(function(){
 			    $(".new-modal").click(function(){
-			    	create_modal($('#sample_2').dataTable().fnSettings().aoData.length + 1);  
+			    	create_modal($('.modal.fade').length + 1);  
 			    }); 	
-			    $('#sample_2').on('click', '.delete-row', function(e) {
-					modal_id = $(this).closest('tr').children('td:eq(0)').text();
-					alert(modal_id);
-					alert($('.modal.fade').length);
-					$(this).closest('tr').remove();
-					$('#responsive-'+model_id).children('div').remove();
-					//alert(table.row( this ).data());
+			    $('#sample_2').on('click', '.delete-row', function(event) {
+			    	event.preventDefault();
+
+			    	//Get ID of the modal being deleted
+					modal_id = $(this).closest('tr').children('td:first').text();
+
+					//Update modal to indicate value was deleted
+					$('#locations-' + modal_id + '-retired').val("True");
+
+					//Get stop number being removed
+					stop_number = $(this).closest('tr').find(".stop-number").val()
+					//Update stop #
+					$('.stop-number').each(function(){
+						if($(this).val() > stop_number) {
+							$(this).val($(this).val() - 1);
+						}
+					});
+					
+					var tr = $(this).closest("tr");
+					$('#sample_2').dataTable().fnDeleteRow(tr.index());
 				});
-				$('.edit_modal').on('click', '.edit-modal', function(e) {
-					modal_id = $(this).closest('tr').children('td:eq(0)').text();
-					alert(modal_id);
-					alert($('.modal.fade').length);
-					$(this).closest('tr').remove();
-					$('#responsive-'+model_id).children('.save-modal').text("Save");
+				$( document ).on('click', '.edit-modal', function(e) {
+					modal_id = $(this).closest('tr').children('td:first').text();
+					$('#responsive-' + $.trim(modal_id)).find('.save-modal').text("Update");
+					$('#responsive-' + $.trim(modal_id)).find('.save-modal').addClass("update-modal");
+					$('#responsive-' + $.trim(modal_id)).find('.update-modal').removeClass("save-modal");
 					//alert(table.row( this ).data());
 				});
 			});
@@ -357,7 +252,7 @@
 				
 				var count = $('#sample_2').dataTable().fnSettings().aoData.length + 1;
 				$('#sample_2').dataTable().fnAddData( [
-		         	count,
+		         	'<input type=\"text\" id=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" name=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" class=\"form-control stop-number\" value=\"' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '\"> <p style=\"display:none;\" class=\"modal-id\">' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '<\/p>',
 		        	$('#locations-' + count + '-address1').val(),
 		         	$('#locations-' + count + '-city').val(),
 		        	$('#locations-' + count + '-state').val(),
@@ -365,18 +260,37 @@
 		        	$('#locations-' + count + '-pickup_weight').val(),
 		        	$('#locations-' + count + '-delivery_weight').val(),
 		        	$('#locations-' + count + '-arrival_date').val(),
-		        	"<a class=\"delete-row\" href=\"\">Delete<\/a>" ]
+		        	'<a class=\"edit-modal\" href=\"#responsive-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '\" data-toggle=\"modal\">Edit<\/a>/<a class=\"delete-row\" href=\"\">Delete<\/a>' ]
 		        );
 				
-				$('.new-modal').prop('href', '#responsive-' + (count + 1));
+				$('.new-modal').prop('href', '#responsive-' + ($('.modal.fade').length + 1));
 
 				
 
 			}); 
 
+			$( document ).on( "click", ".update-modal", function() {
+				var modal_id = $(this).closest(".modal.fade").children("p").text();
+				//alert($(this).closest(".form-control.stop-number").length);
+				$('#sample_2').dataTable().fnUpdate( 
+					['<input type=\"text\" id=\"locations-' + modal_id + '-stop_number\" class=\"form-control stop-number\" value=\"' + modal_id + '\"> <p style=\"display:none;\" class=\"modal-id\">' + modal_id + '<\/p>', 
+					$('#locations-' + modal_id + '-address1').val(),
+		         	$('#locations-' + modal_id + '-city').val(),
+		        	$('#locations-' + modal_id + '-state').val(),
+		        	$('#locations-' + modal_id + '-postal_code').val(),
+		        	$('#locations-' + modal_id + '-pickup_weight').val(),
+		        	$('#locations-' + modal_id + '-delivery_weight').val(),
+		        	$('#locations-' + modal_id + '-arrival_date').val(),
+		        	'<a class=\"edit-modal\" href=\"#responsive-' + modal_id + '\" data-toggle=\"modal\">Edit<\/a>/<a class=\"delete-row\" href=\"\">Delete<\/a>'
+		        	], $('td').filter(function() {
+							return $(this).children("p").text() == modal_id;
+						}).closest('tr').index());
+			}); 
+
 			function create_modal(index){
 			    
 			    var modal = '<div id=\"responsive-' + index + '\" class=\"modal fade\" tabindex=\"-1\" data-width=\"840\" style=\"display: none;\">' +
+			   				' <p style=\"display:none;\" class=\"modal-id\">' + index + '<\/p>' + 
 							'	<div class=\"modal-header\" id=\"modal-header\">' +
 							'		<button type=\"button\" class=\"close\" data-dismiss=\"modal\" aria-hidden=\"true\">' +
 							'			&times;' +
@@ -395,7 +309,7 @@
 							'						<div class=\"col-md-12\">' +
 							'							<h4>General<\/h4>' +
 							'							<hr>' +
-							'							<input type="hidden" id="locations-' + index + '-stop_number" name="locations-' + index + '-stop_number" class="form-control" value="' + index + '">' +
+							'							<input type=\"hidden\" id=\"locations-' + index + '-retired\" name=\"locations-' + index + '-retired\" class=\"form-control\" value=\"'+index+'\">' +
 							'							<div class=\"form-group\">' +
 							'								<label class=\"col-sm-3 control-label\">' +
 							'									Address <span class=\"symbol required\"><\/span>' +
@@ -493,6 +407,7 @@
 							'		<\/div>' +
 							'	<\/div>' +
 							'	<div class=\"modal-footer\">' +
+							'   <input type=\"hidden\" id=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" name=\"locations-' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '-stop_number\" class=\"form-control stop-number\" value=\"' + ($('#sample_2').dataTable().fnSettings().aoData.length + 1) + '\">' +
 							'		<button type=\"button\" data-dismiss=\"modal\" class=\"btn btn-light-grey\">' +
 							'			Close' +
 							'		<\/button>' +
