--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -10,7 +10,7 @@
           </button>
           <!-- end: RESPONSIVE MENU TOGGLER -->
           <!-- start: LOGO -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="{{ url_for('static.index') }}">
             Tron Logistics
           </a>
           <!-- end: LOGO -->
