--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -6,38 +6,6 @@
 	<!-- start: PAGE CONTENT -->
 	<div class="row" id="form-container">
 		<div class="col-sm-12">
-			<!-- start: FORM WIZARD PANEL -->
-			<div id="wizard" class="swMain">
-				<ul>
-					<li>
-						<a href="#step-1">
-							<div class="stepNumber">
-								1
-							</div>
-							<span class="stepDesc"> Step 1
-								<br />
-								<small>General Information</small> </span>
-						</a>
-					</li>
-					<li>
-						<a href="#step-2">
-							<div class="stepNumber">
-								2
-							</div>
-							<span class="stepDesc"> Step 2
-								<br />
-								<small>Lane(s)</small> </span>
-						</a>
-					</li>
-				</ul>
-				<div class="progress progress-striped active progress-sm">
-					<div aria-valuemax="100" aria-valuemin="0" role="progressbar" class="progress-bar progress-bar-success step-bar">
-						<span class="sr-only"> 0% Complete (success)</span>
-					</div>
-				</div>
-				<div id="step-1">
-					<h2 class="StepTitle">Step 1 Content</h2>
-					<hr>
 					<div class="row">
 						<div class="col-sm-10">
 							<div class="form-group">
@@ -114,78 +82,69 @@
 						</div>
 					</div>
 					<hr>
-					<div class="form-group">
-						<div class="col-sm-3 col-sm-offset-7">
-							<button class="btn btn-blue next-step btn-block">
-								Next <i class="fa fa-arrow-circle-right"></i>
-							</button>
-						</div>
-					</div>
-				</div>
-				<div id="step-2">
-					<h2 class="StepTitle">Step 2 Content</h2>
-					<div class="col-md-12">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<i class="fa fa-external-link-square"></i>
-								Locations
-								<div class="panel-tools">
-									<a class="btn btn-xs btn-link panel-collapse collapses" href="#"> </a>
-									<a class="btn btn-xs btn-link panel-config" href="#panel-config" data-toggle="modal"> <i class="fa fa-wrench"></i> </a>
-									<a class="btn btn-xs btn-link panel-refresh" href="#"> <i class="fa fa-refresh"></i> </a>
-									<a class="btn btn-xs btn-link panel-expand" href="#"> <i class="fa fa-resize-full"></i> </a>
-									<a class="btn btn-xs btn-link panel-close" href="#"> <i class="fa fa-times"></i> </a>
-								</div>
-							</div>
-							<div class="panel-body">
-								<div class="row">
-									<div class="col-md-12 space20">
-										<a href="#responsive-1" data-toggle="modal" class="new-modal btn btn-green">
-													Add New <i class="fa fa-plus"></i>
-												</a>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<i class="fa fa-external-link-square"></i>
+									Locations
+									<div class="panel-tools">
+										<a class="btn btn-xs btn-link panel-collapse collapses" href="#"> </a>
+										<a class="btn btn-xs btn-link panel-config" href="#panel-config" data-toggle="modal"> <i class="fa fa-wrench"></i> </a>
+										<a class="btn btn-xs btn-link panel-refresh" href="#"> <i class="fa fa-refresh"></i> </a>
+										<a class="btn btn-xs btn-link panel-expand" href="#"> <i class="fa fa-resize-full"></i> </a>
+										<a class="btn btn-xs btn-link panel-close" href="#"> <i class="fa fa-times"></i> </a>
 									</div>
 								</div>
-								<div class="table-responsive">
-									<table class="table table-striped table-hover" id="sample_2">
-										<thead>
-											<tr>
-												<th>Stop #</th>
-												<th>Street Address</th>
-												<th>City</th>
-												<th>State</th>
-												<th>Zip</th>
-												<th>Pickup Weight</th>
-												<th>Delivery Weight</th>
-												<th>Arrival Date</th>
-												{#<th>Arrival Time</th>#}
-												<th>Delete</th>
-											</tr>
-										</thead>
-										<tbody>
-											<!--- Content created by table-data.js -->
-										</tbody>
-									</table>
+								<div class="panel-body">
+									<div class="row">
+										<div class="col-md-12 space20">
+											<a href="#responsive-1" data-toggle="modal" class="new-modal btn btn-green">
+														Add New <i class="fa fa-plus"></i>
+													</a>
+										</div>
+									</div>
+									<div class="table-responsive">
+										<table class="table table-striped table-hover" id="sample_2">
+											<thead>
+												<tr>
+													<th>Stop #</th>
+													<th>Street Address</th>
+													<th>City</th>
+													<th>State</th>
+													<th>Zip</th>
+													<th>Pickup Weight</th>
+													<th>Delivery Weight</th>
+													<th>Arrival Date</th>
+													{#<th>Arrival Time</th>#}
+													<th>Delete</th>
+												</tr>
+											</thead>
+											<tbody>
+												<!--- Content created by table-data.js -->
+											</tbody>
+										</table>
+									</div>
 								</div>
 							</div>
-						</div>
 
-					</div>
-					<hr>
-					<div class="form-group">
-						<div class="col-sm-2 col-sm-offset-3">
-							<button class="btn btn-light-grey back-step btn-block">
-								<i class="fa fa-circle-arrow-left"></i> Back
-							</button>
 						</div>
-						<div class="col-sm-2 col-sm-offset-3">
-							<button type="submit" class="btn btn-success btn-block">
-								Finish <i class="fa fa-arrow-circle-right"></i>
-							</button>
+						<hr>
+						<div class="form-group">
+							<div class="col-sm-2 col-sm-offset-3">
+								<button class="btn btn-light-grey back-step btn-block">
+									<i class="fa fa-circle-arrow-left"></i> Back
+								</button>
+							</div>
+							<div class="col-sm-2 col-sm-offset-3">
+								<button type="submit" class="btn btn-success btn-block">
+									Finish <i class="fa fa-arrow-circle-right"></i>
+								</button>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>							
-			<!-- end: FORM WIZARD PANEL -->
+			
 		</div>
 	</div>
 </form>
@@ -347,7 +306,7 @@
 							'									Arrival Date <span class=\"symbol required\"><\/span>' +
 							'								<\/label>' +
 							'								<div class=\"col-sm-7\">' +
-							'									<input type=\"text\" id=\"locations-' + index + '-arrival_date\" name=\"locations-' + index + '-arrival_date\" data-date-format=\"dd-mm-yyyy\" data-date-viewmode=\"years\" class=\"form-control date-picker\">' +
+							'									<input type=\"text\" id=\"locations-' + index + '-arrival_date\" name=\"locations-' + index + '-arrival_date\" data-date-format=\"mm-dd-yyyy\" data-date-viewmode=\"years\" class=\"form-control date-picker\">' +
 							'								<\/div>' +
 							'							<\/div>' +
 							'						<\/div>' +
